--- a/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk/Views/Shared/_Layout.cshtml
@@ -352,6 +352,16 @@
                         </li>
 
                         <li class="nav-item">
+                            <a asp-controller="UserRoleProfiles" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Role Profiles
+
+                                </p>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
                             <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index")" class="nav-link">
                                 <i class="nav-icon fas fa-lock"></i>
                                 <p>
