--- a/HelpDesk/Views/Users/Index.cshtml
+++ b/HelpDesk/Views/Users/Index.cshtml
@@ -23,9 +23,6 @@
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MiddleName)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
@@ -37,9 +34,11 @@
             <th>
                 @Html.DisplayNameFor(model => model.Gender)
             </th>
-           
-            <th>Edit</th>
-            <th>Delete</th>
+            <th>
+                @Html.DisplayNameFor(model => model.Role)
+            </th>
+          @*   <th>Edit</th>
+            <th>Delete</th> *@
         </tr>
     </thead>
     <tbody>
@@ -53,9 +52,6 @@
                     @Html.DisplayFor(modelItem => item.FirstName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.MiddleName)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.LastName)
                 </td>
                 <td>
@@ -65,10 +61,12 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Gender)
+                    @Html.DisplayFor(modelItem => item.Gender.Description)
                 </td>
-
-               
+                <td>
+                    @Html.DisplayFor(modelItem => item.Role.Name)
+                </td>
+               @* 
                 <td>
                     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
 
@@ -76,7 +74,7 @@
                 <td>
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 
-                </td>
+                </td> *@
             </tr>
         }
     </tbody>
