--- a/HelpDesk/Views/Users/Index.cshtml
+++ b/HelpDesk/Views/Users/Index.cshtml
@@ -16,9 +16,9 @@
             <table id="example1" class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>
+            @* <th>
                 @Html.DisplayNameFor(model => model.Id)
-            </th>
+            </th> *@
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
@@ -37,17 +37,17 @@
             <th>
                 @Html.DisplayNameFor(model => model.Role)
             </th>
-          @*   <th>Edit</th>
-            <th>Delete</th> *@
+            <th>Edit</th>
+            <th>Delete</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+              @*   <td>
                     @Html.DisplayFor(modelItem => item.Id)
-                </td>
+                </td> *@
                 <td>
                     @Html.DisplayFor(modelItem => item.FirstName)
                 </td>
@@ -66,7 +66,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Role.Name)
                 </td>
-               @* 
+               
                 <td>
                     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
 
@@ -74,7 +74,7 @@
                 <td>
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 
-                </td> *@
+                </td>
             </tr>
         }
     </tbody>
