--- a/HelpDesk/Views/Countries/Index.cshtml
+++ b/HelpDesk/Views/Countries/Index.cshtml
@@ -28,6 +28,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.CreatedOn)
             </th>
+            <th>Cities</th>
             <th>View</th>
             <th>Edit</th>
             <th>Delete</th>
@@ -47,6 +48,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedOn)
+            </td>
+            <td>
+                  <a class="btn btn-success" asp-action="CountryCities" asp-route-id="@item.Id">Cities</a>
             </td>
             <td>
                   <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id">Details</a>
