--- a/HelpDesk/Views/Comments/Details.cshtml
+++ b/HelpDesk/Views/Comments/Details.cshtml
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                    <td>@Html.DisplayFor(model => model.CreatedBy.Id)</td>
+                    <td>@Html.DisplayFor(model => model.CreatedBy.FullName)</td>
                 </tr>
             </table>
         </div>
