--- a/HelpDesk/Views/TicketCategories/Details.cshtml
+++ b/HelpDesk/Views/TicketCategories/Details.cshtml
@@ -22,7 +22,7 @@
                 </tr>
                 <tr>
                     <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                    <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.Id)</td>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.FullName)</td>
                 </tr>
                 <tr>
                     <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedOn)</th>
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedBy)</th>
-                    <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.Id)</td>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.FullName)</td>
                 </tr>
                 <tr>
                     <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedOn)</th>
