--- a/HelpDesk/Views/Countries/Details.cshtml
+++ b/HelpDesk/Views/Countries/Details.cshtml
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy)</td>
+                <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.FullName)</td>
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedOn)</th>
@@ -29,7 +29,7 @@
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedBy)</th>
-                <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy)</td>
+                <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.FullName)</td>
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedOn)</th>
