--- a/HelpDesk/Views/Departments/Delete.cshtml
+++ b/HelpDesk/Views/Departments/Delete.cshtml
@@ -24,7 +24,7 @@
                     </tr>
                     <tr>
                         <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                        <th class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.Id)</th>
+                        <th class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.FullName)</th>
                     </tr>
                     <tr>
                         <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedOn)</th>
@@ -32,7 +32,7 @@
                     </tr>
                     <tr>
                         <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedBy)</th>
-                        <th class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.Id)</th>
+                        <th class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.FullName)</th>
                     </tr>
                     <tr>
                         <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedOn)</th>
