--- a/HelpDesk/Views/Departments/Edit.cshtml
+++ b/HelpDesk/Views/Departments/Edit.cshtml
@@ -14,7 +14,9 @@
             <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Id" /> 
+            <input type="hidden" asp-for="CreatedById" />
+            <input type="hidden" asp-for="CreatedOn" />
             <div class="row">
             <div class="col-md-6">
             <div class="form-group">
@@ -28,34 +30,6 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            </div>
-            <div class="col-md-6">
-            <div class="form-group">
-                <label asp-for="CreatedById" class="control-label"></label>
-                <select asp-for="CreatedById" class="form-control" asp-items="ViewBag.CreatedById"></select>
-                <span asp-validation-for="CreatedById" class="text-danger"></span>
-            </div>
-            </div>
-            <div class="col-md-6">
-            <div class="form-group">
-                <label asp-for="CreatedOn" class="control-label"></label>
-                <input asp-for="CreatedOn" class="form-control" />
-                <span asp-validation-for="CreatedOn" class="text-danger"></span>
-            </div>
-            </div>
-            <div class="col-md-6">
-            <div class="form-group">
-                <label asp-for="ModifiedById" class="control-label"></label>
-                <select asp-for="ModifiedById" class="form-control" asp-items="ViewBag.ModifiedById"></select>
-                <span asp-validation-for="ModifiedById" class="text-danger"></span>
-            </div>
-            </div>
-            <div class="col-md-6">
-            <div class="form-group">
-                <label asp-for="ModifiedOn" class="control-label"></label>
-                <input asp-for="ModifiedOn" class="form-control" />
-                <span asp-validation-for="ModifiedOn" class="text-danger"></span>
             </div>
             </div>
             </div>
