--- a/HelpDesk/Views/SystemCodeDetails/Edit.cshtml
+++ b/HelpDesk/Views/SystemCodeDetails/Edit.cshtml
@@ -15,6 +15,8 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="CreatedById" />
+            <input type="hidden" asp-for="CreatedOn" />
             <div class="row">
            <div class="col-md-6">
             <div class="form-group">
