--- a/HelpDesk/Views/SystemSettings/Details.cshtml
+++ b/HelpDesk/Views/SystemSettings/Details.cshtml
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                    <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.Id)</td>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.FullName)</td>
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.CreatedOn)</th>
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.ModifiedBy)</th>
-                    <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.Id)</td>
+                    <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.FullName)</td>
                 </tr>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.ModifiedOn)</th>
