--- a/HelpDesk/Views/TicketSubCategories/Delete.cshtml
+++ b/HelpDesk/Views/TicketSubCategories/Delete.cshtml
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.Id)</td>
+                <td class="col-sm-10">@Html.DisplayFor(model => model.CreatedBy.FullName)</td>
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.CreatedOn)</th>
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedBy)</th>
-                <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.Id)</td>
+                <td class="col-sm-10">@Html.DisplayFor(model => model.ModifiedBy.FullName)</td>
             </tr>
             <tr>
                 <th class="col-sm-2">@Html.DisplayNameFor(model => model.ModifiedOn)</th>
