--- a/HelpDesk/Views/UserRoleProfiles/Delete.cshtml
+++ b/HelpDesk/Views/UserRoleProfiles/Delete.cshtml
@@ -42,7 +42,7 @@
                         @Html.DisplayNameFor(model => model.CreatedBy)
                     </th>
                     <td class="col-sm-10">
-                        @Html.DisplayFor(model => model.CreatedBy.Id)
+                        @Html.DisplayFor(model => model.CreatedBy.FullName)
                     </td>
                 </tr>
                 <tr>
@@ -58,7 +58,7 @@
                         @Html.DisplayNameFor(model => model.ModifiedBy)
                     </th>
                     <td class="col-sm-10">
-                        @Html.DisplayFor(model => model.ModifiedBy.Id)
+                        @Html.DisplayFor(model => model.ModifiedBy.FullName)
                     </td>
                 </tr>
                 <tr>
