--- a/HelpDesk/Views/UserRoleProfiles/Details.cshtml
+++ b/HelpDesk/Views/UserRoleProfiles/Details.cshtml
@@ -41,7 +41,7 @@
                         @Html.DisplayNameFor(model => model.CreatedBy)
                     </th>
                     <td class="col-sm-10">
-                        @Html.DisplayFor(model => model.CreatedBy.Id)
+                        @Html.DisplayFor(model => model.CreatedBy.FullName)
                     </td>
                 </tr>
                 <tr>
@@ -57,7 +57,7 @@
                         @Html.DisplayNameFor(model => model.ModifiedBy)
                     </th>
                     <td class="col-sm-10">
-                        @Html.DisplayFor(model => model.ModifiedBy.Id)
+                        @Html.DisplayFor(model => model.ModifiedBy.FullName)
                     </td>
                 </tr>
                 <tr>
