--- a/HelpDesk/Views/UserRoleProfiles/Edit.cshtml
+++ b/HelpDesk/Views/UserRoleProfiles/Edit.cshtml
@@ -14,6 +14,8 @@ z
             </div>
             <input type="hidden" asp-for="TaskId" />
             <input type="hidden" asp-for="RoleId" />
+            <input type="hidden" asp-for="CreatedById" />
+            <input type="hidden" asp-for="CreatedOn" />
             <div class="form-group">
                 <label asp-for="CreatedById" class="control-label"></label>
                 <select asp-for="CreatedById" class="form-control" asp-items="ViewBag.CreatedById"></select>
