--- a/HelpDesk/Views/Cities/Index.cshtml
+++ b/HelpDesk/Views/Cities/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HelpDesk.Models.City>
+﻿@model IEnumerable<HelpDesk.Models.CitiesView>
 
 @{
     ViewData["Title"] = "Index";
@@ -20,10 +20,10 @@
                 @Html.DisplayNameFor(model => model.PostalCode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.CityName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Country)
+                @Html.DisplayNameFor(model => model.CountryName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreatedBy)
@@ -43,13 +43,13 @@
                 @Html.DisplayFor(modelItem => item.PostalCode)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.CityName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Country.Name)
+                @Html.DisplayFor(modelItem => item.CountryName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy.FullName)
+                @Html.DisplayFor(modelItem => item.CreatedBy)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedOn)
