--- a/HelpDesk/Views/Roles/Index.cshtml
+++ b/HelpDesk/Views/Roles/Index.cshtml
@@ -19,6 +19,7 @@
                 <tr>
                     <th>Role No</th>
                     <th>Role Name</th>
+                    <th>Rights</th>
                     <th>View</th>
                     <th>Edit</th>
                     <th>Delete</th>
@@ -31,13 +32,16 @@
                         <td>@Html.DisplayFor(modelItem => item.Id)</td>
                         <td>@Html.DisplayFor(modelItem => item.Name)</td>
                         <td>
-                            <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id" aria-label="View @item.Name Role">View</a>
+                           <a class="btn btn-success" asp-action="UserRights" asp-controller="UserRoleProfiles" asp-route-id="@item.Id">Assign Rights</a>
                         </td>
                         <td>
-                            <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id" aria-label="Edit @item.Name Role">Edit</a>
+                           <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id">View</a>
                         </td>
                         <td>
-                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id" aria-label="Delete @item.Name Role">Delete</a>
+                            <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        </td>
+                        <td>
+                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                         </td>
                     </tr>
                 }
