--- a/HelpDesk/Views/UserRoleProfiles/UserRights.cshtml
+++ b/HelpDesk/Views/UserRoleProfiles/UserRights.cshtml
@@ -7,7 +7,7 @@
 
 <div class="card rounded-4">
     <div class="card-body">
-        <form asp-action="UserRights">
+        <form asp-action="UserRights" method="post">
             <div class="row">
                 <div class="col-md-12">
                     <label asp-for="RoleId" class="control-label">Role</label>
@@ -20,41 +20,39 @@
                     </div>
                 </div>
 
-                <div class="col-md-12">
+                <div class="col-md-12 mt-3">
                     <div id="tree">
-                        <ul id="treeData" class="hummingbird-treeview" style="display: block">
-                            <li>
-                                <i class="fas fa-angle-right "></i>
-                                <input class="grandparent" rel="0" value="0" name="AllRights[]" type="checkbox" />
-                                <i class="fas fa-folder-open"></i> All Modules
-                                <ul>
-                                    @foreach (var item in Model.SystemTasks)
-                                    {
-                                        <li id="li_@item.Id" class="folder">
-                                            <i class="fas fa-arrow-circle-right animate__animated animate__fadeIn"></i>
-
-                                            <!-- Ensure the checkbox is unchecked if not checked in RightsIdsAssigned -->
-                                            @if (Model.RightsIdsAssigned.Contains(item.Id))
-                                            {
-                                                <input class="parent" rel="@item.Id" value="@item.Id" name="Ids[]" type="checkbox" checked="checked" />
-                                            }
-                                            else
-                                            {
-                                                <input class="parent" rel="@item.Id" value="@item.Id" name="Ids[]" type="checkbox" />
-                                            }
-
-                                            <i class="fas fa-folder-open"><span>@item.Name</span></i>
-                                        </li>
-                                    }
-                                </ul>
-                            </li>
+                        <input type="checkbox" id="selectAll" />
+                        <label for="selectAll"><strong> Select All</strong></label>
+                        <ul id="treeData" style="list-style-type: none; padding-left: 20px;">
+                            @foreach (var item in Model.SystemTasks)
+                            {
+                                <li>
+                                    <input type="checkbox" class="task-checkbox" id="task_@item.Id" name="Ids[]" value="@item.Id"
+                                    @(Model.RightsIdsAssigned.Contains(item.Id) ? "checked" : "") />
+                                    <label for="task_@item.Id">@item.Name</label>
+                                </li>
+                            }
                         </ul>
                     </div>
                 </div>
-
+            </div>
+            <div class="mt-3">
+                <button type="submit" class="btn btn-success">Save Changes</button>
             </div>
         </form>
     </div>
 </div>
 
-<script src="js/hummingbird-treeview.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const selectAll = document.getElementById("selectAll");
+        const checkboxes = document.querySelectorAll(".task-checkbox");
+
+        selectAll.addEventListener("change", function () {
+            checkboxes.forEach(checkbox => {
+                checkbox.checked = selectAll.checked;
+            });
+        });
+    });
+</script>
