--- a/HelpDesk/Views/UserRoleProfiles/UserRights.cshtml
+++ b/HelpDesk/Views/UserRoleProfiles/UserRights.cshtml
@@ -16,43 +16,104 @@
                             <select asp-for="RoleId" class="form-control" asp-items="ViewBag.RoleId">
                                 <option value="">Select Role</option>
                             </select>
+                            <a class="CurrentRootUrl" href="~/UserRoleProfiles/UserRights/"></a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-12 mt-3">
                     <div id="tree">
-                        <input type="checkbox" id="selectAll" />
+                        <input type="checkbox" id="selectAll" class="grandparent" />
                         <label for="selectAll"><strong> Select All</strong></label>
+
                         <ul id="treeData" style="list-style-type: none; padding-left: 20px;">
-                            @foreach (var item in Model.SystemTasks)
+                            @foreach (var parent in Model.SystemTasks)
                             {
                                 <li>
-                                    <input type="checkbox" class="task-checkbox" id="task_@item.Id" name="Ids[]" value="@item.Id"
-                                    @(Model.RightsIdsAssigned.Contains(item.Id) ? "checked" : "") />
-                                    <label for="task_@item.Id">@item.Name</label>
+                                    <input type="checkbox" class="parent" id="task_@parent.Id" name="Ids[]" value="@parent.Id"
+                                    @(Model.RightsIdsAssigned.Contains(parent.Id) ? "checked" : "") />
+                                    <label for="task_@parent.Id"><strong>@parent.Name</strong></label>
+
+                                    @if (parent.ChildTasks != null && parent.ChildTasks.Any())
+                                    {
+                                        <ul style="list-style-type: none; padding-left: 20px;">
+                                            @foreach (var child in parent.ChildTasks)
+                                            {
+                                                <li>
+                                                    <input type="checkbox" class="child" id="task_@child.Id" name="Ids[]" value="@child.Id"
+                                                    @(Model.RightsIdsAssigned.Contains(child.Id) ? "checked" : "") />
+                                                    <label for="task_@child.Id">@child.Name</label>
+
+                                                    @if (child.ChildTasks != null && child.ChildTasks.Any())
+                                                    {
+                                                        <ul style="list-style-type: none; padding-left: 20px;">
+                                                            @foreach (var subChild in child.ChildTasks)
+                                                            {
+                                                                <li>
+                                                                    <input type="checkbox" class="sub-child" id="task_@subChild.Id" name="Ids[]" value="@subChild.Id"
+                                                                    @(Model.RightsIdsAssigned.Contains(subChild.Id) ? "checked" : "") />
+                                                                    <label for="task_@subChild.Id">@subChild.Name</label>
+                                                                </li>
+                                                            }
+                                                        </ul>
+                                                    }
+                                                </li>
+                                            }
+                                        </ul>
+                                    }
                                 </li>
                             }
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="mt-3">
-                <button type="submit" class="btn btn-success">Save Changes</button>
+            <div class="row">
+                <div class="col-md-12">
+                <button type="submit" class="btn btn-success pull-right">Save Rights</button>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const selectAll = document.getElementById("selectAll");
-        const checkboxes = document.querySelectorAll(".task-checkbox");
 
-        selectAll.addEventListener("change", function () {
-            checkboxes.forEach(checkbox => {
-                checkbox.checked = selectAll.checked;
-            });
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        const selectAll = $("#selectAll");
+        const parentCheckboxes = $(".parent");
+        const childCheckboxes = $(".child");
+        const subChildCheckboxes = $(".sub-child");
+
+        // Handle "Select All" functionality
+        selectAll.on("change", function () {
+            parentCheckboxes.prop("checked", this.checked);
+            childCheckboxes.prop("checked", this.checked);
+            subChildCheckboxes.prop("checked", this.checked);
+        });
+
+        // Handle parent-child relationships
+        parentCheckboxes.on("change", function () {
+            $(this).closest("li").find(".child, .sub-child").prop("checked", this.checked);
+        });
+
+        childCheckboxes.on("change", function () {
+            $(this).closest("li").find(".sub-child").prop("checked", this.checked);
+        });
+
+        // Navigate on dropdown change
+        $('select[asp-for="RoleId"]').on("change", function () {
+            let selectedRole = $(this).val();
+            let baseUrl = $(".CurrentRootUrl").attr("href");
+            if (selectedRole) {
+                window.location = baseUrl + selectedRole;
+            }
+        });
+
+        // Ensure nested checkboxes affect each other
+        $('input.parent, input.grandparent, input.child').on("change", function () {
+            $(this).siblings().find("input[type='checkbox']").prop("checked", this.checked);
         });
     });
 </script>
+
